syntax = "proto3";

option go_package = "github.com/binjamil/keyd/grpc";

message GetRequest {
  string key = 1;
}

message GetResponse {
  string value = 1;
}

message PutRequest {
  string key = 1;
  string value = 2;
}

message PutResponse {}

message DeleteRequest {
  string key = 1;
}

message DeleteResponse {}

service Keyd {
  rpc Get(GetRequest) returns (GetResponse);

  rpc Put(PutRequest) returns (PutResponse);

  rpc Delete(DeleteRequest) returns (PutResponse);
}

// protoc --proto_path=./ --go_out=./ --go_opt=paths=source_relative --go-grpc_out=./ --go-grpc_opt=paths=source_relative ./keyd.proto